# Erased

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarks/: CMakeLists.txt  benchmarks.cpp
erased/: CMakeLists.txt  erased.h
erased/include/erased/: erased.h  ref.h
erased/include/erased/utils/: utils.h
examples/: CMakeLists.txt  Example1.cpp
tests/: CMakeLists.txt  compile_time_tests.cpp  tests.cpp
